# painless_input

./: Cargo.toml  readme.md
examples/: input.rs  input_array.rs  multiselect.rs  select.rs
src/: lib.rs
