[package]
name = "simple_input"
description = "A simple input library with support for array input, validation, and pretty error messages."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
