[package]
name = "painless_input"
description = "A simple input library with support for array input, validation, and pretty error messages."
license = "MIT"
authors = ["Khant Htet Aung"]
keywords = ["input", "validation", "array", "simple"]
version = "0.1.4"
homepage = "https://github.com/AHL00/painless_input"
edition = "2021"
readme = "README.md"

[dependencies]
crossterm = "0.27.0"
